--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST="tics.cpuae6qmuvit.us-east-2.rds.amazonaws.com"
+DB_HOST="databasef.c7ysc2gi0tfc.eu-north-1.rds.amazonaws.com"
 DB_PORT="5432"
 DB_USER="postgres"
 DB_PASSWORD="postgresql"
